samples/_failures_safe/1761635644_0d1258_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bf0b405.c: In function ‘main’:
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bf0b405.c:155:21: error: expected declaration or statement at end of input
